--- a/src/sass/module/_links.scss
+++ b/src/sass/module/_links.scss
@@ -1,3 +1,6 @@
+:focus {outline:none;}
+::-moz-focus-inner {border:0;}
+
 a {
   color: $primary-color;
 }
