--- a/src/sass/utilities/_grid.scss
+++ b/src/sass/utilities/_grid.scss
@@ -7,7 +7,7 @@
 $grid-count: 12 !default;
 
 $grid-class: col !default;
-$gutter-width: 30px !default;
+$gutter-width: 3rem;
 
 $grid-breakpoints: (
   xs: 0,
